<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/bar_layout"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_below="@+id/toolbar"
        android:id="@+id/lineree"
        android:padding="16dp">


        <TextView
            android:id="@+id/textView3"
            style="@style/Theme.AppCompat.Light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Welcome There!"
            android:textColor="@color/Gray"
            android:textSize="36sp"
            android:textStyle="bold"
            android:layout_gravity="left"
            android:layout_marginTop="100dp"
            app:layout_constraintBottom_toTopOf="@+id/email"
            app:layout_constraintHorizontal_bias="0.264"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.65" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/email"
            android:inputType="textEmailAddress"
            android:layout_marginTop="50dp"
            app:met_floatingLabel="normal"
            android:background="@drawable/input_fields"
            android:hint="@string/email"
            android:textColorHint="@color/Gray"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:id="@+id/password"
            android:layout_marginTop="15dp"
            android:background="@drawable/input_fields"
            app:met_floatingLabel="normal"
            android:hint="@string/password"
            android:textColorHint="@color/Gray"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="125dp"
            android:background="@drawable/button_back_red"
            android:text="@string/login"
            android:textColor="#FFF" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_password"
            android:layout_marginTop="60dp"
            android:textColor="@color/Gray"
            android:onClick="reset"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lineree"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="114dp"
        android:layout_marginLeft="114dp"
        android:layout_marginTop="25dp"
        android:text="@string/create_new_account"
        android:textColor="@color/Gray" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lineree"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="253dp"
        android:layout_marginLeft="253dp"
        android:layout_marginTop="25dp"
        android:onClick="goToRegister"
        android:text="@string/register_btn"
        android:textColor="@color/Red" />

</RelativeLayout>