<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/bar_layout"/>

    <LinearLayout
        android:id="@+id/lineree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_below="@+id/toolbar"
        android:padding="16dp">

         <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Time to Chatte"
            android:textSize="30sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Create a new account"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/username"
            android:layout_marginTop="80dp"
            android:background="@drawable/input_fields"
            app:met_floatingLabel="normal"
            android:hint="@string/username"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/Email"
            android:inputType="textEmailAddress"
            android:layout_marginTop="10dp"
            android:background="@drawable/input_fields"
            app:met_floatingLabel="normal"
            android:hint="@string/email"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:id="@+id/Password"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="60dp"
            android:background="@drawable/input_fields"
            app:met_floatingLabel="normal"
            android:hint="@string/password"/>

        <Button
            android:id="@+id/btn_reg"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/register_btn"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_back_red"
            android:textColor="#FFF"/>


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lineree"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:onClick="goToLogin"
        android:text="Already have account?"
        android:textColor="@color/Gray" />
</RelativeLayout>