<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".Fragments.ProfileFragment">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="165dp"
                android:layout_height="165dp"
                android:id="@+id/profile_image"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:src="@mipmap/ic_launcher"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:id="@+id/username"
                android:layout_below="@+id/profile_image"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:layout_below="@+id/username"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/email"
                android:layout_below="@+id/username"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="80dp"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Password"
                android:layout_below="@+id/email"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"/>

            <ImageView
                android:layout_width="200dp"
                android:layout_height="18dp"
                android:layout_below="@+id/email"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="80dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/password"
                android:id="@+id/password" />

            <TextView
                android:id="@+id/forget_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_password"
                android:layout_below="@+id/password"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="50dp"
                android:textSize="16sp"
                android:textColor="@color/Red"/>


        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>